Curso_de_Kubernetes/service_externalName.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-database-service
spec:
  type: ExternalName
  externalName: database.example.com
