Curso_de_Kubernetes/service_loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-loadbalancer
spec:
  selector:
    app: HelloLoadBalancer
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
