Curso_de_Kubernetes/service_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-nodeport-service
spec:
  type: NodePort
  selector:
    app: backend-app # A que pods aplica
  ports:
    - protocol: TCP
      port: 80 # Puerto interno del Service
      targetPort: 80 # Puerto del contenedor NGINX
      nodePort: 30080 # Puerto abierto directamente en la IP del Nodo
